syntax = "proto3";

option go_package = "./proto";

message FetchProfileRequest {
  string name = 1;
}

message FetchProfileResponse {
  string name = 1;
  int64 age = 2;
  string department = 3;
}

service Profile {
  rpc GetProfileByUserName (FetchProfileRequest) returns (FetchProfileResponse) {}
}